# ddm_project

./: .gitignore  README.md  ecosystem.config.js  pyproject.toml
configs/: default.yaml
notebooks/: create_eda.py  create_eda_extra.py  create_results.py  eda.ipynb  results.ipynb  run_eda.py
scripts/: evaluate.py  train.py
src/ddm_project/: baselines.py  cf_model.py  ensemble.py  main.py  model.py  preprocessing.py
tests/: test_metrics.py  test_preprocessing.py
